tested Allocators under linux
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@18239 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/samples/memory/Makefile.linux
+++ b/samples/memory/Makefile.linux
@@ -11,7 +11,7 @@ INCLUDE_DIRS = -I. -I../../include
 # LIB DIRS
 #==============================================================================
 #LIB_DIRS = -L../../target/nar/lib/i386-Linux-g++/static
-LIB_DIRS = -L../../lib/x86_64/static
+LIB_DIRS = -L../../src/.libs
 
 #==============================================================================
 # BINDING SHARED LIB: NAME & EXTENSION
@@ -33,7 +33,7 @@ LDFLAGS =
 #------------------------------------------------------------------------------
 # LIBS
 #------------------------------------------------------------------------------
-LIBS = -lyatd -lpthread -lstdc++
+LIBS = -lyat -lpthread -lstdc++ -ldl
 
 #------------------------------------------------------------------------------
 # OBJS FILES
