tested Allocators under linux
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@18241 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/samples/memory/Makefile.linux
+++ b/samples/memory/Makefile.linux
@@ -14,11 +14,6 @@ INCLUDE_DIRS = -I. -I../../include
 LIB_DIRS = -L../../src/.libs
 
 #==============================================================================
-# BINDING SHARED LIB: NAME & EXTENSION
-#==============================================================================
-BIN_NAME = allocator
-
-#==============================================================================
 # COMP$(CC)ILER/LINKER OPTIONS for GNU/LINUX
 #==============================================================================
 CC=g++
@@ -67,21 +62,12 @@ build_alloc: $(ALLOC_SRC_OBJS)
 	$(LD) -o allocatortest $(LDFLAGS) $(ALLOC_SRC_OBJS) $(LIB_DIRS) $(LIBS) 
 
 #------------------------------------------------------------------------------
-# RULE: install
-#------------------------------------------------------------------------------
-install:
-	mkdir -p ../../bin/linux
-	cp -f ./$(BIN_NAME) ../../bin/linux
-	rm -f ./$(BIN_NAME)
-
-#------------------------------------------------------------------------------
 # RULE: clean
 #------------------------------------------------------------------------------
 clean:
 	rm -f *.o
 	rm -f *~
-	rm -f $(BIN_NAME) 
-	rm -f ../../bin/linux/$(BIN_NAME)
+	rm -f ./sharedobjectptrtest ./sharedptrtest ./allocatortest
 
 
 
