Reorganized the samples dir
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@18242 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/samples/any/Makefile.linux
+++ b/samples/any/Makefile.linux
@@ -16,12 +16,12 @@ LIB_DIRS += -L../../src/.libs
 #==============================================================================
 # SRC FILE NAME
 #===============================================================================
-SRC = client_socket_test.o
+SRC = any_test.o
 
 #==============================================================================
 # BINARY NAME
 #===============================================================================
-BIN = clientsockettest
+BIN = anytest
 
 #==============================================================================
 # COMP$(CC)ILER/LINKER OPTIONS for GNU/LINUX
