--- a/samples/memory/sharedobject/Makefile.linux
+++ b/samples/memory/sharedobject/Makefile.linux
@@ -1,27 +1,17 @@
 #==============================================================================
-# Makefile to generate the YAT Test - NL - SOLEIL
+# Makefile to generate the YAT Test - NL & JM - SOLEIL
 #============================================================================== 
 
 #==============================================================================
 # INCLUDE DIRS
 #==============================================================================
-INCLUDE_DIRS = -I. -I../../include 
+INCLUDE_DIRS = -I. -I../../../include 
 
 #==============================================================================
 # LIB DIRS
 #==============================================================================
-LIB_DIRS  = -L../../target/nar/lib/i386-Linux-g++/static
-LIB_DIRS += -L../../src/.libs
-
-#==============================================================================
-# SRC FILE NAME
-#===============================================================================
-SRC = client_socket_test.o
-
-#==============================================================================
-# BINARY NAME
-#===============================================================================
-BIN = clientsockettest
+LIB_DIRS  = -L../../../target/nar/lib/i386-Linux-g++/static
+LIB_DIRS += -L../../../src/.libs
 
 #==============================================================================
 # COMP$(CC)ILER/LINKER OPTIONS for GNU/LINUX
@@ -43,7 +33,7 @@ LIBS = -lyat -lpthread -lstdc++ -ldl
 #------------------------------------------------------------------------------
 # OBJS FILES
 #------------------------------------------------------------------------------
-SRC_OBJS = ./src/$(SRC)
+SO_SRC_OBJS = ./src/shared_object_ptr_test.o
 	 			 	 	 
 #------------------------------------------------------------------------------
 # RULE for .cpp files
@@ -55,13 +45,13 @@ SRC_OBJS = ./src/$(SRC)
 #------------------------------------------------------------------------------
 # RULE: all
 #------------------------------------------------------------------------------
-all: build
+all: build_so
 
 #------------------------------------------------------------------------------
 # RULE: build
 #------------------------------------------------------------------------------
-build: $(SRC_OBJS)
-	$(LD) -o $(BIN) $(LDFLAGS) $(SRC_OBJS) $(LIB_DIRS) $(LIBS) 
+build_so: $(SO_SRC_OBJS)
+	$(LD) -o sharedobjectptrtest $(LDFLAGS) $(SO_SRC_OBJS) $(LIB_DIRS) $(LIBS) 
 
 #------------------------------------------------------------------------------
 # RULE: clean
@@ -69,7 +59,7 @@ build: $(SRC_OBJS)
 clean:
 	rm -f ./src/*.o
 	rm -f ./src/*~
-	rm -f ./$(BIN)
+	rm -f ./sharedobjectptrtest
 
 
 
