--- a/samples/memory/sharedptr/Makefile.linux
+++ b/samples/memory/sharedptr/Makefile.linux
@@ -1,29 +1,24 @@
 #==============================================================================
-# Makefile to generate the YAT Task Test - NL & JM - SOLEIL
+# Makefile to generate the YAT Test - NL & JM - SOLEIL
 #============================================================================== 
 
 #==============================================================================
 # INCLUDE DIRS
 #==============================================================================
-INCLUDE_DIRS = -I. -I../../include 
+INCLUDE_DIRS = -I. -I../../../include 
 
 #==============================================================================
 # LIB DIRS
 #==============================================================================
-LIB_DIRS = -L../../lib/static/linux
-
-#==============================================================================
-# BINDING SHARED LIB: NAME & EXTENSION
-#==============================================================================
-BIN_NAME = yatmisctests
+LIB_DIRS  = -L../../../target/nar/lib/i386-Linux-g++/static
+LIB_DIRS += -L../../../src/.libs
 
 #==============================================================================
 # COMP$(CC)ILER/LINKER OPTIONS for GNU/LINUX
 #==============================================================================
 CC=g++
 #------------------------------------------------------------------------------
-CFLAGS  = -pipe -O2 -W -D_DEBUG -DYAT_ENABLE_LOG
-CFLAGS += -g -D_DEBUG
+CFLAGS  = -pipe -O2 -W -g
 #------------------------------------------------------------------------------
 LD=gcc
 #------------------------------------------------------------------------------
@@ -33,13 +28,13 @@ LDFLAGS =
 #------------------------------------------------------------------------------
 # LIBS
 #------------------------------------------------------------------------------
-LIBS = -lYATd -lpthread -lstdc++
+LIBS = -lyat -lpthread -lstdc++ -ldl
 
 #------------------------------------------------------------------------------
 # OBJS FILES
 #------------------------------------------------------------------------------
-SRC_OBJS = ./main.o
-					 			 	 	 
+SP_SRC_OBJS = ./src/sharedptr_test.o
+	 			 	 	 
 #------------------------------------------------------------------------------
 # RULE for .cpp files
 #------------------------------------------------------------------------------
@@ -50,30 +45,21 @@ SRC_OBJS = ./main.o
 #------------------------------------------------------------------------------
 # RULE: all
 #------------------------------------------------------------------------------
-all: build install
+all: build_sp
 
 #------------------------------------------------------------------------------
 # RULE: build
 #------------------------------------------------------------------------------
-build: $(SRC_OBJS)
-	$(LD) -o $(BIN_NAME) $(LDFLAGS) $(SRC_OBJS) $(LIB_DIRS) $(LIBS) 
-
-#------------------------------------------------------------------------------
-# RULE: install
-#------------------------------------------------------------------------------
-install:
-	mkdir -p ../../bin/linux
-	cp -f ./$(BIN_NAME) ../../bin/linux
-	rm -f ./$(BIN_NAME)
+build_sp: $(SP_SRC_OBJS)
+	$(LD) -o sharedptrtest $(LDFLAGS) $(SP_SRC_OBJS) $(LIB_DIRS) $(LIBS) 
 
 #------------------------------------------------------------------------------
 # RULE: clean
 #------------------------------------------------------------------------------
 clean:
-	rm -f *.o
-	rm -f *~
-	rm -f $(BIN_NAME) 
-	rm -f ../../bin/linux/$(BIN_NAME)
+	rm -f ./src/*.o
+	rm -f ./src/*~
+	rm -f ./sharedptrtest
 
 
 
