--- a/samples/timer/Makefile.linux
+++ b/samples/timer/Makefile.linux
@@ -1,5 +1,5 @@
 #==============================================================================
-# Makefile to generate the YAT Test - NL & JM - SOLEIL
+# Makefile to generate the YAT Test - NL - SOLEIL
 #============================================================================== 
 
 #==============================================================================
@@ -10,20 +10,25 @@ INCLUDE_DIRS = -I. -I../../include
 #==============================================================================
 # LIB DIRS
 #==============================================================================
-LIB_DIRS = -L../../lib/static
+LIB_DIRS  = -L../../target/nar/lib/i386-Linux-g++/static
+LIB_DIRS += -L../../src/.libs
 
 #==============================================================================
-# BINDING SHARED LIB: NAME & EXTENSION
+# SRC FILE NAME
+#===============================================================================
+SRC = timeout_test.o
+
 #==============================================================================
-BIN_NAME = tmotest
+# BINARY NAME
+#===============================================================================
+BIN = timeouttest
 
 #==============================================================================
 # COMP$(CC)ILER/LINKER OPTIONS for GNU/LINUX
 #==============================================================================
 CC=g++
 #------------------------------------------------------------------------------
-CFLAGS  = -pipe -O2 -W -D_DEBUG -DYAT_ENABLE_LOG
-CFLAGS += -g -D_DEBUG
+CFLAGS  = -pipe -O2 -W -g
 #------------------------------------------------------------------------------
 LD=gcc
 #------------------------------------------------------------------------------
@@ -33,13 +38,13 @@ LDFLAGS =
 #------------------------------------------------------------------------------
 # LIBS
 #------------------------------------------------------------------------------
-LIBS = -lYATd -lpthread -lstdc++
+LIBS = -lyat -lpthread -lstdc++ -ldl
 
 #------------------------------------------------------------------------------
 # OBJS FILES
 #------------------------------------------------------------------------------
-SRC_OBJS = ./timeout_test.o
-					 			 	 	 
+SRC_OBJS = ./src/$(SRC)
+	 			 	 	 
 #------------------------------------------------------------------------------
 # RULE for .cpp files
 #------------------------------------------------------------------------------
@@ -50,30 +55,21 @@ SRC_OBJS = ./timeout_test.o
 #------------------------------------------------------------------------------
 # RULE: all
 #------------------------------------------------------------------------------
-all: build install
+all: build
 
 #------------------------------------------------------------------------------
 # RULE: build
 #------------------------------------------------------------------------------
 build: $(SRC_OBJS)
-	$(LD) -o $(BIN_NAME) $(LDFLAGS) $(SRC_OBJS) $(LIB_DIRS) $(LIBS) 
-
-#------------------------------------------------------------------------------
-# RULE: install
-#------------------------------------------------------------------------------
-install:
-	mkdir -p ../../bin/linux
-	cp -f ./$(BIN_NAME) ../../bin/linux
-	rm -f ./$(BIN_NAME)
+	$(LD) -o $(BIN) $(LDFLAGS) $(SRC_OBJS) $(LIB_DIRS) $(LIBS) 
 
 #------------------------------------------------------------------------------
 # RULE: clean
 #------------------------------------------------------------------------------
 clean:
-	rm -f *.o
-	rm -f *~
-	rm -f $(BIN_NAME) 
-	rm -f ../../bin/linux/$(BIN_NAME)
+	rm -f ./src/*.o
+	rm -f ./src/*~
+	rm -f ./$(BIN)
 
 
 
