Reorganized the samples dir Made some mods on the allocators
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@18245 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/samples/advanced/pom.xml
+++ b/samples/advanced/pom.xml
@@ -7,11 +7,11 @@
        <version>RELEASE</version>
    </parent>
    <groupId>fr.soleil.device</groupId>
-   <artifactId>yat-allocator-test-${aol}-${mode}</artifactId>
+   <artifactId>yat-advanced-test-${aol}-${mode}</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>nar</packaging>
-   <name>AllocatorTester</name>
-   <description>a yat::Allocators test</description>
+   <name>AdvancedTest</name>
+   <description>a yat advanced test</description>
    <build>
        <plugins>
            <plugin>
