--- a/msvc/8.0/YAT_Static.vcproj
+++ b/msvc/8.0/YAT_Static.vcproj
@@ -6,7 +6,6 @@
 	ProjectGUID="{5CEA0DCF-675C-4C40-AF4E-D4FB4FEB9BFF}"
 	RootNamespace="YAT"
 	Keyword="Win32Proj"
-	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -151,10 +150,6 @@
 		<Filter
 			Name="src"
 			>
-			<File
-				RelativePath="..\..\src\Exception.cpp"
-				>
-			</File>
 			<Filter
 				Name="bitsstream"
 				>
@@ -203,6 +198,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\src\threading\SyncAccess.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\src\threading\Task.cpp"
 					>
 				</File>
@@ -231,6 +230,70 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="utils"
+				>
+				<File
+					RelativePath="..\..\src\Exception.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\utils\Logging.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\utils\String.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\utils\StringTemplate.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\utils\StringTokenizer.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\utils\URI.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="time"
+				>
+				<File
+					RelativePath="..\..\src\time\Time.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="file"
+				>
+				<File
+					RelativePath="..\..\src\file\FileName.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\file\Win32FileImpl.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="memory"
+				>
+				<File
+					RelativePath="..\..\src\memory\MemBuf.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="system"
+				>
+				<File
+					RelativePath="..\..\src\system\Win32SysUtilsImpl.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="include"
@@ -239,19 +302,7 @@
 				Name="yat"
 				>
 				<File
-					RelativePath="..\..\include\yat\Any.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\include\yat\Callback.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\include\yat\CommonHeader.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\include\yat\config-linux.h"
 					>
 				</File>
 				<File
@@ -259,43 +310,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\include\yat\DataBuffer.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\include\yat\Exception.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\include\yat\Exception.i"
-					>
-				</File>
-				<File
-					RelativePath="..\..\include\yat\GenericContainer.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\include\yat\Inline.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\include\yat\LogHelper.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\include\yat\NonCopyable.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\include\yat\Portability.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\include\yat\Timer.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\include\yat\XString.h"
 					>
 				</File>
 				<Filter
@@ -406,6 +425,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\include\yat\threading\SyncAccess.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\include\yat\threading\Task.h"
 						>
 					</File>
@@ -503,6 +526,114 @@
 					</File>
 					<File
 						RelativePath="..\..\include\yat\memory\DataBuffer.tpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\memory\MemBuf.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\memory\SharedPtr.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="any"
+					>
+					<File
+						RelativePath="..\..\include\yat\any\Any.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\any\GenericContainer.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="utils"
+					>
+					<File
+						RelativePath="..\..\include\yat\utils\Callback.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\Exception.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\Exception.i"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\Logging.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\LogHelper.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\NonCopyable.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\ReferenceCounter.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\Signal.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\Singleton.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\String.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\StringTemplate.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\StringTokenizer.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\URI.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\utils\XString.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="system"
+					>
+					<File
+						RelativePath="..\..\include\yat\system\SysUtils.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="time"
+					>
+					<File
+						RelativePath="..\..\include\yat\time\Time.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\include\yat\time\Timer.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="file"
+					>
+					<File
+						RelativePath="..\..\include\yat\file\FileName.h"
 						>
 					</File>
 				</Filter>
