--- a/samples/bitsstream/pom.xml
+++ b/samples/bitsstream/pom.xml
@@ -22,11 +22,11 @@
                         <includePaths>
                           <includePath>${project.basedir}/src</includePath>
                         </includePaths>
-                        <options>
+                        <!--options>
                             <option>-Wno-uninitialized</option>
                             <option>-Wno-unused-parameter</option>
                             <option>-Wno-unused-variable</option>
-                        </options>
+                        </options-->
                     </cpp>  
                 </configuration>  
            </plugin>
@@ -41,7 +41,7 @@
        <dependency>
            <groupId>fr.soleil.lib</groupId>
            <artifactId>YAT-${aol}-${library}-${mode}</artifactId>
-           <version>1.7.2</version>
+           <version>1.7.4-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <developers>
