added 64bits FS support
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@20623 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,9 @@
                 <os>Linux</os>
               </activation>
               <cpp>
+                <defines>
+                  <define>_FILE_OFFSET_BITS=64</define>
+                </defines>
                 <excludes>
                   <exclude>**/*WinNt*.cpp</exclude>
                   <exclude>**/*Win32*.cpp</exclude>
