Applied Volker's patch (mantis #23227)
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@21070 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,16 +7,19 @@ set(VERSION "1.7.7")
 if (lib_dir)
   set(LIB_INSTALL_DIR ${lib_dir})
 else()
-  set(LIB_INSTALL_DIR "lib${LIB_SUFFIX}")
+  set(LIB_INSTALL_DIR "lib${LIB_SUFFIX}") 
 endif()  
 
-add_definitions(-ansi -Wall -Wextra -Werror)
+if (UNIX)
+	add_definitions(-ansi -Wall -Wextra -Werror)
+endif()
 
 add_subdirectory (src)
 #add_subdirectory (test)
 
 set(prefix ${CMAKE_INSTALL_PREFIX})
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/yat.pc.in"
-     "${CMAKE_CURRENT_BINARY_DIR}/yat.pc" @ONLY IMMEDIATE)
-
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/yat.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
+if (UNIX)
+  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/yat.pc.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/yat.pc" @ONLY IMMEDIATE)
+  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/yat.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
+endif()
