Added missing header files
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@21607 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -69,13 +69,14 @@ nobase_include_HEADERS =  \
 	yat/threading/SyncAccess.h \
 	yat/time/Timer.h \
 	yat/time/Time.h \
-  yat/utils/Callback.h \
-  yat/utils/NonCopyable.h \
-  yat/utils/XString.h \
+	yat/utils/Callback.h \
+	yat/utils/NonCopyable.h \
+	yat/utils/XString.h \
 	yat/utils/Signal.h \
 	yat/utils/Singleton.h \
 	yat/utils/StringTokenizer.h \
 	yat/utils/String.h \
-	yat/utils/StringTemplate.h
-
-
+	yat/utils/StringTemplate.h \
+	yat/utils/URI.h \
+	yat/utils/ReferenceCounter.h \
+	yat/utils/Logging.h
